Move hardcode variables from code to application property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8081
 server.error.whitelabel.enabled=false
+
+currency.converter.access.key=52d9bcf431d0af0ee45df8718cb67362
+currency.converter.endpoint=http://apilayer.net/api/live
+vat.validation.endpoint=https://api.cloudmersive.com/validate/vat/lookup
+vat.api.key=28e63794-ef8a-4616-80bb-26fdd3709a19
